--- a/bootstrap-learning/mizuxe/css/style.css
+++ b/bootstrap-learning/mizuxe/css/style.css
@@ -1,5 +1,5 @@
 body {
-  margin-top: 105; }
+  margin-top: 105px; }
 
 .navbar {
   box-shadow: 2px 2px 5px #3292a6;
@@ -8,3 +8,15 @@ body {
   .navbar .nav-item {
     font-size: 1.4rem;
     padding-right: 1.4rem; }
+
+#showcase {
+  position: relative;
+  background: url("../img/mountains.jpg");
+  min-height: 600px; }
+  #showcase .primary-overlay {
+    background: rgba(50, 146, 166, 0.8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
