--- a/bootstrap-learning/mizuxe/scss/style.scss
+++ b/bootstrap-learning/mizuxe/scss/style.scss
@@ -2,7 +2,7 @@ $primary: #3292a6;
 $primary-overlay: rgba(50, 146, 166, 0.8);
 
 body {
-  margin-top: 105;
+  margin-top: 105px;
 }
 
 .navbar {
@@ -13,5 +13,20 @@ body {
   .nav-item {
     font-size: 1.4rem;
     padding-right: 1.4rem;
+  }
+}
+
+#showcase {
+  position: relative;
+  background: url("../img/mountains.jpg");
+  min-height: 600px;
+
+  .primary-overlay {
+    background: $primary-overlay;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
